<resources>
    <string name="app_name">Buku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Sign in</string>
    <string name="intro_home">Find your next book now</string>
    <string name="tvNewPost">New Post</string>
    <string name="btnCalificaMyBooks">Rate this book</string>
    <string name="btnVerMas">See more</string>
    <string name="category_title">Categories</string>
    <string name="see_all">See all</string>
    <string name="recent_posts_title">Recent posts</string>
    <string name="ivLogoApp">Logo</string>
    <string name="tv_no_account">Don\'t have an account yet?</string>
    <string name="bt_create_account">Sign Up!</string>
    <string name="bt_forgot_password">Forgot your password?</string>
    <string name="tv_welcome">Welcome</string>
    <string name="book_image">Imagen de libro</string>
    <string name="eat_pray_love">Eat Pray Love</string>
    <string name="elizabeth_gilbert">Elizabeth Gilbert</string>
    <string name="bogota_salitre_plaza">Bogota, Salitre Plaza</string>
    <string name="novels">Novelas</string>
    <string name="details">Details</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="posted_by">Posted by</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et</string>
    <string name="used_like_new">Used - Like new</string>
    <string name="user_name">User name</string>
    <string name="request_book_swap">Request book swap</string>
    <string name="bogota">Bogota</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="self_help">Self help</string>
    <string name="user_image">User image</string>
    <string name="dash">-</string>
    <string name="date">10/11/2021</string>
    <string name="marker_title">Your book is here</string>
    <string name="bt_sign_out">Sign out</string>
</resources>