<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.LoginFragment">

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_welcome"
        android:textAlignment="center"
        android:textColor="@color/primaryDarkColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBienvenido"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondaryDarkColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginUsername"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/secondaryDarkColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="304dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword" />

    <TextView
        android:id="@+id/tvLoginNewAccountQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="7dp"
        android:text="@string/tv_no_account"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@id/btSignUpLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <Button
        android:id="@+id/btSignUpLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/bt_create_account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintStart_toEndOf="@id/tvLoginNewAccountQuestion"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <Button
        android:id="@+id/btForgotPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_forgot_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSignUpLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>