<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNameBook"
            style="@style/black_bold_titles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/eat_pray_love"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthorBook"
            style="@style/black_subtitles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/elizabeth_gilbert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameBook" />

        <ImageView
            android:id="@+id/ivBookImage"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/book_image"
            android:src="@drawable/comer_rezar_amar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthorBook" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            android:layout_below="@id/ivBookImage"
            app:layout_constraintStart_toEndOf="@id/ivBookImage"
            app:layout_constraintBottom_toBottomOf="@id/ivBookImage"
            android:layout_marginStart="8dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBookDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:cardBackgroundColor="@color/secondaryLightColor"
            app:cardCornerRadius="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBookImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">

                <TextView
                    style="@style/black_bold_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/details" />

                <TextView
                    android:id="@+id/tvBookParagraphDetails"
                    style="@style/black_paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lorem_ipsum" />


                <TextView
                    style="@style/black_bold_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/condition" />

                <TextView
                    android:id="@+id/tvBookCondition"
                    style="@style/black_paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/used_like_new" />

                <TextView
                    style="@style/black_bold_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:outlineProvider="none"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tvLocation"
                    style="@style/black_paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/bogota" />

                <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>


                <TextView
                    style="@style/black_bold_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:outlineProvider="none"
                    android:text="@string/posted_by" />

                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/black_paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_name" />

                <Button
                    android:id="@+id/btIwantIt"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/request_book_swap"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="11sp"
                    android:layout_gravity="center" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


    <!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->

    <!--&lt;!&ndash;    <com.google.android.material.appbar.AppBarLayout&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="wrap_content">&ndash;&gt;-->
    <!--&lt;!&ndash;        <Toolbar&ndash;&gt;-->
    <!--&lt;!&ndash;            android:id="@+id/toolbarProduct"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="wrap_content"/>&ndash;&gt;-->
    <!--&lt;!&ndash;    </com.google.android.material.appbar.AppBarLayout>&ndash;&gt;-->

    <!--    <FrameLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginTop="?attr/actionBarSize">-->
    <!--        <ScrollView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent">-->
    <!--            <LinearLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:orientation="vertical">-->
    <!--                <androidx.cardview.widget.CardView-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    app:cardCornerRadius="16dp"-->
    <!--                    android:layout_margin="12dp">-->

    <!--                    <LinearLayout-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="wrap_content"-->
    <!--                        android:orientation="vertical">-->

    <!--                        <ImageView-->
    <!--                            android:id="@+id/ivBookImage"-->
    <!--                            android:layout_width="70dp"-->
    <!--                            android:layout_height="70dp"-->
    <!--                            android:layout_marginTop="5dp"-->
    <!--                            android:layout_marginBottom="5dp"-->
    <!--                            android:layout_marginLeft="8dp"-->
    <!--                            android:layout_marginRight="8dp"/>-->
    <!--                        <TextView-->
    <!--                            android:id="@+id/tvNameBook"-->
    <!--                            android:layout_width="176dp"-->
    <!--                            android:layout_height="20dp"-->
    <!--                            android:layout_marginLeft="88dp"-->
    <!--                            android:layout_marginTop="10dp"-->
    <!--                            android:textColor="@color/secondaryTextColor"-->
    <!--                            android:textSize="16dp"-->
    <!--                            android:textStyle="bold" />-->

    <!--                        <TextView-->
    <!--                            android:id="@+id/tvAuthorBook"-->
    <!--                            android:layout_width="176dp"-->
    <!--                            android:layout_height="14dp"-->
    <!--                            android:layout_marginLeft="88dp"-->
    <!--                            android:layout_marginTop="40dp"-->
    <!--                            android:textColor="@color/secondaryTextColor"-->
    <!--                            android:textSize="12dp" />-->

    <!--                        <TextView-->
    <!--                            android:id="@+id/tvLocation"-->
    <!--                            android:layout_width="176dp"-->
    <!--                            android:layout_height="14dp"-->
    <!--                            android:layout_marginLeft="88dp"-->
    <!--                            android:layout_marginTop="60dp"-->
    <!--                            android:layout_marginBottom="10dp"-->
    <!--                            android:textColor="@color/secondaryDarkColor"-->
    <!--                            android:textSize="12dp"-->
    <!--                            android:textStyle="bold" />-->

    <!--                        <Button-->
    <!--                            android:id="@+id/btVerMas"-->
    <!--                            android:layout_width="80dp"-->
    <!--                            android:layout_height="32dp"-->
    <!--                            android:layout_gravity="end"-->
    <!--                            android:layout_marginTop="44dp"-->
    <!--                            android:layout_marginRight="10dp"-->
    <!--                            android:layout_marginLeft="10dp"-->
    <!--                            android:text="@string/btnVerMas"-->
    <!--                            android:textColor="@color/primaryTextColor"-->
    <!--                            android:textSize="9dp" />-->

    <!--                    </LinearLayout>-->
    <!--                </androidx.cardview.widget.CardView>-->
    <!--            </LinearLayout>-->
    <!--        </ScrollView>-->
    <!--    </FrameLayout>-->
    <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->