<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.LogInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="Bienvenido"
        android:gravity="center"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="bold"
        android:textSize="32dp"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="200dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/hint_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@+id/etLoginUsername"
        android:id="@+id/etLoginPassword"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/hint_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginPassword"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_login"/>

    <TextView
        android:id="@+id/tvLoginNewAccountQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="3dp"
        android:text="¿No tienes cuenta?" />

    <TextView
        android:id="@+id/tvLoginNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="12dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/tvLoginNewAccountQuestion"
        android:text="¡Crea una acá!"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

    <TextView
        android:layout_below="@id/tvLoginNewAccount"
        android:layout_margin="12dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Olvidé mi contraseña"/>

</RelativeLayout>